// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util colorResponse 1`] = `
"{
  \\"data\\": {
    \\"message\\": \\"success\\"
  }
}"
`;

exports[`util colorResponse 2`] = `
"{
  \\"data\\": {
    \\"message\\": \\"success\\"
  }
}

Errors
- failure"
`;

exports[`util colorResponse 3`] = `
"Errors
- failure"
`;

exports[`util colorizeGraphQL 1`] = `
"
      type User {
        id: String
      }
    "
`;

exports[`util errorMessage 1`] = `
"
Schema not found. Trying running \`gest --schema ./path/to/schema.js\`
or with \`schema.js\` in the current working directory.
"
`;
